prusti-tests/tests/parse/ui/parenthesis.stderr
error[E0308]: mismatched types
 --> $DIR/parenthesis.rs:8:15
  |
8 | #[requires(   (    12345))]
  |               ^^^^^^^^^^^
  |               |
  |               expected `bool`, found integer
  |               expected due to this

error[E0308]: mismatched types
  --> $DIR/parenthesis.rs:11:20
   |
11 | #[requires(   (    12345 && (
   |                    ^^^^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/parenthesis.rs:14:20
   |
14 |         ((false && 1234) ||
   |           -----    ^^^^ expected `bool`, found integer
   |           |
   |           expected because this is `bool`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
